Fix markdown gulp task and add pages

--- a/src/pages/control.njk
+++ b/src/pages/control.njk
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    {{ banner('images/control-module.png', 'Control Module Circuit Board') }}
+    {{ banner('images/control-module.png', 'Control Module Circuit Board', true) }}
 
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
