--- a/src/pages/flow.njk
+++ b/src/pages/flow.njk
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    {{ banner('images/flow-module.png', 'Flow Module Circuit Board') }}
+    {{ banner('images/flow-module.png', 'Flow Module Circuit Board', true) }}
 
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
