--- a/src/pages/lighting.njk
+++ b/src/pages/lighting.njk
@@ -16,7 +16,7 @@
         </div>
     </div>
 
-    {{ banner('images/lighting-module.png', 'Lighting Module Circuit Board') }}
+    {{ banner('images/lighting-module.png', 'Lighting Module Circuit Board', true) }}
 
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
