--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @import "base/base";
 
 // import components
+@import "components/article";
 @import "components/banner";
 @import "components/header";
 @import "components/layout";
