--- a/src/templates/partials/header/navigation.njk
+++ b/src/templates/partials/header/navigation.njk
@@ -1,17 +1,24 @@
 <nav class="main">
     <ul class="dropdown menu" data-dropdown-menu>
-        <li><a href="#">About</a></li>
+        <li><a href="/overview.html">Overview</a></li>
         <li>
             <a href="#">Docs</a>
             <ul class="menu">
                 <li><a href="/control.html">Control Module</a></li>
                 <li><a href="/flow.html">Flow Module</a></li>
                 <li><a href="/lighting.html">Lighting Module</a></li>
+                <li><a href="/enclosures.html">Initial Enclosures</a></li>
             </ul>
         </li>
+        <li><a href="/principles.html">Principles</a></li>
+        <li><a href="/teamwork.html">Teamwork</a></li>
     </ul>
 
-    <a href="https://www.github.com/valveteam" class="github-link">
+    <a href="https://www.github.com/valveteam" class="icon-link github-link">
         <i class="fab fa-github"></i>
+    </a>
+
+    <a href="https://drive.google.com/open?id=1tVCJ_OA8gJL3nt0VkBkX7JLoFxgfmyr1" class="icon-link google-drive-link">
+        <i class="fab fa-google-drive"></i>
     </a>
 </nav>
