Add film to homepage

--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -17,7 +17,11 @@
     </div>
 </div>
 
-{{ banner('images/valve_test.png', 'Solar Valve Testing') }}
+<div class="banner video">
+    <video autoplay muted>
+        <source src="/resources/film.mp4" type="video/mp4">
+    </video>
+</div>
 
 <div class="grid-container">
     <div class="grid-x grid-margin-x add-spacing">
