--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@
 @import "components/module-card";
 @import "components/navigation";
 @import "components/statistics";
+@import "components/video";
 
 // import typography stylesheets
 @import "typography/headings";
