--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -2,6 +2,10 @@
   line-height: $header-size;
   font-size: 1.3em;
 
+  @include breakpoint(small only) {
+    line-height: $small-header-size;
+  }
+
   span {
     display: inline-block;
     font-family: 'Open Sans', sans-serif;
