--- a/src/templates/partials/header/header.njk
+++ b/src/templates/partials/header/header.njk
@@ -1,7 +1,7 @@
 <header class="main">
     <div class="grid-container">
         <div class="grid-x grid-margin-x">
-            <div class="cell small-4">
+            <div class="cell medium-3">
                 {% include "partials/logo.njk" %}
             </div>
 
