--- a/src/pages/index.njk
+++ b/src/pages/index.njk
@@ -18,7 +18,7 @@
 </div>
 
 <div class="banner video">
-    <video autoplay muted>
+    <video autoplay muted loop>
         <source src="/resources/film.mp4" type="video/mp4">
     </video>
 </div>
