--- a/src/scss/settings/_variables.scss
+++ b/src/scss/settings/_variables.scss
@@ -1,5 +1,6 @@
 // sizing variables
-$header-size: 120px;
+$header-size: 7.5rem;
+$small-header-size: 5rem;
 
 // color related variables
 $anchor-color: $black;
@@ -29,4 +30,13 @@ $header-styles: (
                 'h5': ('font-size': 16),
                 'h6': ('font-size': 12),
         ),
+);
+
+// responsivity breakpoints
+$breakpoints: (
+        small: 0,
+        medium: 750px,
+        large: 1024px,
+        xlarge: 1200px,
+        xxlarge: 1440px,
 );
