--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,9 @@
 // import the normalize stylesheet
 @import "../../node_modules/normalize.css/normalize.css";
 
+// import the highlight.js stylesheet
+@import "../../node_modules/highlight.js/styles/default.css";
+
 // import foundation settings
 @import "settings/foundation";
 
